<resources>
    <string name="app_name">Pickers Android</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker_simple">DatePicker Simple</string>
    <string name="time_picker_simple">TimePicker Simple</string>
    <string name="output_value_picker">Output Value Picker</string>
    <string name="date_picker_widget">Date Picker Widget</string>
    <string name="time_picker_widget">Time Picker Widget</string>
    <string name="submit_date">Submit Date</string>
    <string name="submit_time">Submit Time</string>
    <string name="datepicker_library">DatePicker Library</string>
    <string name="timepicker_library">TimePicker Library</string>
    <string name="times_radial_picker">%1$d:%2$d</string>
    <string name="calendar_date_picker">Year: %1$s\nMonth: %2$s\nDay: %3$s</string>
</resources>
